fixed errors with duplicate ids given; added css style to modal flex-shrink: 1; to allow long titles to wrap instead of covering the modal close button

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -21,3 +21,9 @@ a {
 #saved-recipe-list img {
     width: 15%;
 }
+
+/* Modal titles and text will wrap if needed */
+.modal p {
+    flex-wrap: wrap;
+    flex-shrink: 1;
+}
